# Stock-Index-Fitting

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  correlation_v02.ipynb  greedy_algorithm_v01.ipynb  greedy_algorithm_v02.ipynb  greedy_algorithm_v03.ipynb  pyproject.toml  stock_index_fitting_gogoal.ipynb  stock_index_fitting_gogoal_v03.ipynb  stock_index_fitting_gogoal_v10.ipynb  stock_index_fitting_gogoal_v11.ipynb  stock_index_fitting_gogoal_v4.ipynb  stock_index_fitting_gogoal_v5.ipynb  stock_index_fitting_gogoal_v7.ipynb  stock_index_fitting_gogoal_v8.ipynb  stock_index_fitting_gogoal_v9.ipynb  stock_index_weight_projection.ipynb  xt获取指数tick.ipynb
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
config/: base.yaml  logging.yaml
dataloader/: security_buy_rules.csv  security_buy_rules_special.csv
docs/: ai-instructions.md  architecture.md  data_dictionary.md  decision_log.md  股指拟合流程.md
scripts/: run_pipeline.py
src/hedge_system/: __init__.py  (+2 more)
utils/: __init__.py  correlation_risk.py  csi_reader.py  dataset_layout.py  db_query.py  downloader.py  downloader_v02.py  exposure_deviation.py  file_utils.py  greedy_score.py  ifind_import_helpers.py  pareto_risk_optimizer_v02.py  quick_query.py  reader.py  risk_model_v02.py  sse_etf_pcf_scraper.py  szse_etf_pcf.py  tick_analysis.py  tick_analysis_v10.py  tick_analysis_v4.py  tick_analysis_v5.py  tick_analysis_v6.py  tick_analysis_v7.py  tick_analysis_v8.py  tick_analysis_v9.py  weight_projection.py
(+64 files in other folders)
